clusters/groups/on-prem/in-cluster/overlays/argocd/config/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd-virtualservice
spec:
  gateways:
    - istio-ingress/global-gateway
  hosts:
    - argocd.k8scicd.local
  http:
    - route:
      - destination:
          host: argocd-server.argocd.svc.cluster.local
          port:
            number: 80
